--- a/flex.css
+++ b/flex.css
@@ -1731,7 +1731,7 @@ width: 100%;
 
    body{
        min-height: 100vh;
-       display: grid;
+       /* display: grid; */
        grid-template-rows: 1fr auto;
    }  
 
