--- a/flex.css
+++ b/flex.css
@@ -1744,6 +1744,38 @@ width: 100%;
   }
 }
 
+#shirt-hero {
+  width: 100%;
+  /* height: 300px; */
+  object-fit: contain;
+}
+
+.shirt-row {
+  padding: 1rem;
+}
+
+.shirt-container {
+  display: flex;
+  gap: 5.2rem;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.shirt-container > div {
+  width: 190px;
+  height: 250px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.shirt-container > div > img {
+  border: none;
+  object-fit: cover;
+}
+
 /* @media (max-width: 511px){
   .config_options a {
     padding: 0.45rem;
